Fixed missing vertical scrollbar

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    overflow-x: hidden;
     background-color: var(--background-color);
     font-family: 'Open Sans', sans-serif;
 }
